--- a/app/src/main/res/layout/_main_activity__route.xml
+++ b/app/src/main/res/layout/_main_activity__route.xml
@@ -82,13 +82,14 @@
             android:textColor="@color/Black"
             android:layout_alignParentStart="true" />
 
+
         <com.crystal.crystalrangeseekbar.widgets.BubbleThumbRangeSeekbar
             android:id="@+id/rangeSeekbarLimitsForScale4RouteSearch"
             android:layout_below="@+id/textViewLimitsForScale4RouteSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:min_value="0"
-            app:max_value="250"
+            app:min_value="1"
+            app:max_value="29"
             app:steps="1"
             app:bar_color="@color/TT_FG_BLUE"
             app:bar_highlight_color="@color/TT_BG_BLUE"
@@ -100,10 +101,12 @@
 
         <TextView
             android:id="@+id/TextViewNumberOfComments"
+            android:layout_below="@+id/rangeSeekbarLimitsForScale4RouteSearch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/rangeSeekbarLimitsForScale4RouteSearch"
             android:text="@string/strNumberOfComments"
+            android:layout_alignStart="@+id/rangeSeekbarLimitsForScale4RouteSearch"
+            android:layout_alignLeft="@+id/rangeSeekbarLimitsForScale4RouteSearch"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/Black" />
 
