--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,11 +18,18 @@
         android:id="@+id/fab4search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        app:elevation="6dp"
+        android:layout_gravity="top|end"
         android:layout_margin="16dp"
-        app:backgroundTint="@color/TT_BG_BLUE"
         android:src="@drawable/ic_search"
-        app:borderWidth="0dp" />
+        app:backgroundTint="@color/TT_BG_BLUE"
+        app:borderWidth="0dp"
+        app:elevation="6dp" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
 
 </FrameLayout>
