--- a/app/src/main/res/layout/route_activity_found_header.xml
+++ b/app/src/main/res/layout/route_activity_found_header.xml
@@ -86,6 +86,22 @@
                 android:selectAllOnFocus="false"
                 android:text="@string/tableCol_MyComment" />
 
+            <Button
+                android:id="@+id/share_btn"
+                style="@style/Widget.MaterialComponents.Button"
+                android:drawableLeft="@android:drawable/ic_menu_share"
+                android:drawableStart="@android:drawable/ic_menu_share"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/strGpcCoords"
+                android:clickable="true"
+                android:focusable="true"
+                android:textStyle="bold"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/Black"
+                android:padding="@dimen/controls_margin"
+                android:gravity="start|center_vertical" />
 
             <View
                 android:id="@+id/space1_route"
