--- a/app/src/main/res/layout/routes_activity_found_lv_list.xml
+++ b/app/src/main/res/layout/routes_activity_found_lv_list.xml
@@ -17,11 +17,19 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true" />
 
-    <android.support.v7.widget.RecyclerView
+    <TextView
+        android:id="@+id/textViewCaption"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/found_route_caption"
+        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />
+
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_in_routes_activity_found_lv_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/textViewCaption"
         android:divider="@color/Black"
         tools:listitem="@layout/routes_lv_item_found" >
-    </android.support.v7.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 </RelativeLayout>
