--- a/app/src/main/res/layout/summits_activity_found_lv_list.xml
+++ b/app/src/main/res/layout/summits_activity_found_lv_list.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/summits_activity_found_lv_list"
     android:layout_width="wrap_content"
@@ -9,7 +10,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:scrollbars="none">
+    android:scrollbars="none" >
 
     <View
         android:id="@+id/space1"
