Fehlt nur noch der Gipfelkommentar, vorbereiten auf vereinheitlichung aller eigenen Kommentare TODO: "MyTTSummitAND" überall ersetzen durch "MyTTCommentAND"

--- a/app/src/main/res/layout/listitem_my_comment_in_summit.xml
+++ b/app/src/main/res/layout/listitem_my_comment_in_summit.xml
@@ -289,7 +289,7 @@
 
         <variable
             name="myRouteWithPhotos"
-            type="com.teufelsturm.tt_downloader_kotlin.data.entity.Comments.MyTTRouteANDWithPhotos" />
+            type="com.teufelsturm.tt_downloader_kotlin.data.entity.Comments.MyTTCommentANDWithPhotos" />
         <variable
             name="clickListenerImage"
             type="com.teufelsturm.tt_downloader_kotlin.feature.results.adapter.util.CommentImageClickListener" />
