--- a/app/src/main/res/layout/result_route_detail.xml
+++ b/app/src/main/res/layout/result_route_detail.xml
@@ -38,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/header_small"
                 android:textColor="@color/Black"
-                android:background="@drawable/edittext_background"
+                android:background="@drawable/edittext_background_summit"
                 android:gravity="start|end"
                 android:hint="@string/tableCol_MyComment"
                 app:myExtendedCommentStringFormatted="@{viewModel4RouteResultInSummit.mTTRouteAND}"
@@ -73,13 +73,13 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:textSize="@dimen/header_small"
                 android:textColor="@color/Black"
-                android:background="@drawable/edittext_background"
+                android:background="@drawable/edittext_background_summit"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:padding="6dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
-                app:myAscentFormatted="@{viewModel4RouteResultInSummit.mMyTTRouteANDWithPhotos}"
+                app:myAscentFormatted="@{viewModel4RouteResultInSummit.MMyTTCommentANDWithPhotos}"
                 android:ellipsize="marquee"
                 android:singleLine="true"
                 android:textAlignment="viewStart"
