--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="Yellow">#FFFF00</color>
     <color name="PaleYellow">#FFFFE6</color>
     <color name="PaleBlue">#E6E6FF</color>
+    <color name="PaleGreen">#E6FFE6</color>
     <color name="White">#FFFFFF</color>
     <color name="Green">#00FF00</color>
     <color name="Red">#FF0000</color>
