--- a/app/src/main/res/layout/input_my_comment.xml
+++ b/app/src/main/res/layout/input_my_comment.xml
@@ -150,6 +150,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/til_date_of_ascend"
@@ -161,6 +162,7 @@
                     android:layout_height="wrap_content"
                     android:drawableStart="@drawable/ic_baseline_group_add_24"
                     android:drawablePadding="16dp"
+                    android:inputType="textPersonName|textAutoComplete"
                     android:minHeight="56dp"
                     android:paddingStart="16dp"
                     android:completionThreshold="0"
